# rcheer

./: .gitignore  Cargo.toml  README.md  compile.sh
src/: ast.rs  codegen.rs  lib.rs  main.rs  parse.rs  scan.rs  token.rs  typechecker.rs  typed_ast.rs
tests/: basic_expression.rs  common.rs
